--- a/log.html
+++ b/log.html
@@ -13,9 +13,9 @@
         <div class="inputbox">
           <div class="blank_message"></div>
           <input id="box_id" type="text" autofocus placeholder="Username or E-mail">
-          <div class="short_message">Must contain "@".</div>
-          <input id="box_pw" type="text" autofocus placeholder="Password">
-          <div class="incorrect_message">Password is incorrect.</div>
+          <div class="short_message"></div>
+          <input id="box_pw" type="password" autofocus placeholder="Password">
+          <div class="incorrect_message"></div>
         </div>
         <input id ="submit" type="button" value="Continue">
         <div class="message">
